# rust-react-chat

./: Cargo.toml  README.md
src/: hub.rs  main.rs
src/customs/: mod.rs  uuid.rs  uuid_serde.rs
src/models/: inputs.rs  message.rs  mod.rs  outputs.rs  room.rs  user.rs
