[package]
name = "rust-react-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.151", features = ["derive"] }
uuid = { version = "1.2.2",  features = ["serde", "v4"]}
chrono = { version = "0.4.23", features = ["serde"] }
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["full"]}
